####################################################################
#                                                                  #
# CMake script for configuration of GraphLib                       #
#                                                                  #
####################################################################

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT("graph_lib")

#name of executable and source files from which executable is compiled
SET(GRAPH_LIB_TARGET ${PROJECT_NAME})
SET(_target ${GRAPH_LIB_TARGET})
SET(_target_src 	source/graph.cc)

#locate libosmium
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
FIND_PACKAGE(Osmium 2.15.4 REQUIRED)
IF(NOT ${OSMIUM_FOUND})
	MESSAGE(WARNING "Fatal error: libosmium not found!\n")
endif()

#locate zlib
FIND_PACKAGE(ZLIB 1.2.11 REQUIRED)
IF(NOT ${ZLIB_FOUND})
	MESSAGE(WARNING "Fatal error: zlib not found!\n")
endif()

#locate pthread
FIND_PACKAGE(Threads REQUIRED)
IF(NOT ${Threads_FOUND})
	MESSAGE(WARNING "Fatal error: Threads not found!\n")
endif()

#includes
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${OSMIUM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})

#set up the target
ADD_LIBRARY(${_target} SHARED ${_target_src})

#link libraries
TARGET_LINK_LIBRARIES(${_target} ${ZLIB_LIBRARIES})
TARGET_LINK_LIBRARIES(${_target} ${CMAKE_THREAD_LIBS_INIT})

#config files
GET_PROPERTY(INCLUDE_DIRECTORIES_ DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
SET(GRAPH_LIB_INCLUDE_DIRECTORIES "${GRAPH_LIB_INSTALL_PATH_HEADERS}")
FOREACH(INCLUDE_DIRECTORY ${INCLUDE_DIRECTORIES_})
  STRING(APPEND GRAPH_LIB_INCLUDE_DIRECTORIES ";${INCLUDE_DIRECTORY}")
ENDFOREACH(INCLUDE_DIRECTORY)
SET(GRAPH_LIB_INSTALL_PATH_LIBRARIES ${CMAKE_INSTALL_PREFIX}/lib)
SET(GRAPH_LIB_INSTALL_PATH_HEADERS ${CMAKE_INSTALL_PREFIX}/include)
SET(GRAPH_LIB_LIBRARIES "${GRAPH_LIB_INSTALL_PATH_LIBRARIES}/lib${GRAPH_LIB_TARGET}.so")
GET_TARGET_PROPERTY(LINK_LIBRARIES_ ${_target} LINK_LIBRARIES)
FOREACH(LINK_LIBRARY ${LINK_LIBRARIES_})
  STRING(APPEND GRAPH_LIB_LIBRARIES ";${LINK_LIBRARY}")
ENDFOREACH(LINK_LIBRARY)
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cmake/config/Config.cmake.in "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${GRAPH_LIB_TARGET}Config.cmake" @ONLY)
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cmake/config/ConfigVersion.cmake.in "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${GRAPH_LIB_TARGET}ConfigVersion.cmake" @ONLY)

#install
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/graph_lib DESTINATION ${GRAPH_LIB_INSTALL_PATH_HEADERS} FILES_MATCHING PATTERN "*.h")
INSTALL(FILES ${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${GRAPH_LIB_TARGET}Config.cmake DESTINATION ${GRAPH_LIB_INSTALL_PATH_LIBRARIES}/cmake/${GRAPH_LIB_TARGET}/)
INSTALL(FILES ${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${GRAPH_LIB_TARGET}ConfigVersion.cmake DESTINATION ${GRAPH_LIB_INSTALL_PATH_LIBRARIES}/cmake/${GRAPH_LIB_TARGET}/)
INSTALL(TARGETS ${_target} LIBRARY DESTINATION ${GRAPH_LIB_INSTALL_PATH_LIBRARIES})

#tests
ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)


